# sysdoc

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GSD_WORKFLOW_SYSDOC.md  PROMPT.md  README.md  ROADMAP.md  pyproject.toml  setup.py  sysdoc.py  sysdoc_gui.py
.claude/: settings.local.json
.claude/skills/sysdoc-analise/: SKILL.md
.opencode/skills/sysdoc-analise/: SKILL.md
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-cli-style-gsd/: 01-PLAN.md  01-RESEARCH.md  01-REVIEW.md
.planning/phases/02-comando-create-word-pdf/: .continue-here.md  02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-SECURITY.md  02-VERIFICATION.md
.planning/phases/04-ux-clarity/: PLAN.md
Referencias/: modelo-de-termo-de-contrato-servico-sem-mao-de-obra-exclusiva-lei-no-14-133-dez-25.docx  modelo-de-termo-de-referencia-compras-lei-no-14-133-dez-25.docx  modelo-de-termo-de-referencia-servicos-e-obras-lei-no-14-133-dez-25 (1).docx
skills/sysdoc/: SKILL.md
templates/: analise_template.html  render_analise.py  schema_sysdoc.json  validate_sysdoc.py
templates/projeto-padrao/: COMO_USAR.txt
templates/projeto-padrao/modelos/: COLOQUE_MODELOS_AQUI.txt
tests/: test_cli.py  test_validate.py
