[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sysdoc"
version = "0.1.0"
description = "SysDoc CLI para análise de documentos ETP/TR"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyPDF2>=3.0.0",
]

[project.scripts]
sysdoc = "sysdoc:main"
