[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sysdoc"
version = "1.2.0"
description = "CLI IA-agnóstica para análise comparativa de documentos ETP/TR em contratações públicas brasileiras"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "SEPAT/COLOG", email = "sepat@colog.mil.br" }
]
keywords = ["licitação", "contratação pública", "ETP", "TR", "análise jurídica", "IA", "CLI"]
dependencies = [
    "pypdf>=4.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[project.scripts]
sysdoc = "sysdoc:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
